# jibs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GRAMMAR.md  README.md  SPEC.md  composer.json  dist-workspace.toml  docker-compose.yml  magento.jibs  release-please-config.json
.github/: build-setup.yml
.github/workflows/: build-docker.yml  ci.yml  composer-branch.yml  publish-mirror.yml  release-please.yml  release.yml  sign-release.yml
crates/client/: Cargo.toml  build.rs
crates/client/src/: checkpoint.rs  dry_run.rs  dump.rs  error.rs  export.rs  foreign_keys.rs  import.rs  json_config.rs  load.rs  loader.rs  main.rs  metrics.rs  progress.rs  protocol.rs  report.rs  resolver.rs  server_binary.rs  sql.rs  ssh.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  interpolation.rs  lexer.rs  lib.rs  main.rs  parser.rs
crates/parser/tests/: corpus.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: checkpoint.rs  framing.rs  handshake.rs  lib.rs  messages.rs  plan.rs
crates/protocol/tests/: wire_snapshot.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs  metrics.rs  mysql.rs  traversal.rs  tsv.rs
crates/server/tests/: protocol_test.rs
docker/: Dockerfile  Dockerfile.extra  README.md
examples/: magento-generated.jibs  magento.dsl  magento.jibs
packaging/composer/: README.md  composer.json
packaging/composer/src/: version.php
scripts/: build-server.sh  build.sh  generate-magento-jibs.py  publish-composer-branch.sh  schema-relations.py
src/: Launcher.php  ast.rs  interpolation.rs  main.rs  parser.rs  version.php
test/: base-anonymize.jibs  base-config.jibs  base-relations.jibs  import-aggregate.jibs  import-aggregate.json  import-all.jibs  import-circular.jibs  import-comprehensive.json  import-different-roots.jibs  import-docker.jibs  import-nested.jibs  import-overlapping-aggregates.jibs  import-resume-test.jibs  import-with-base.jibs  import.jibs  setup-ssh-keys.sh  test-e2e.sh  test-resume.sh  test-server.sh
test/order-test/: level1a.jibs  level1b.jibs  level2.jibs  root.jibs
test/seed/: 01-schema.sql  02-data.sql  03-circular-schema.sql  04-circular-data.sql
test/ssh-keys/: .gitignore
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/syntaxes/: jibs.tmLanguage.json  mysqlimport-dsl.tmLanguage.json
