[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jelle/jibs"
description = "Jelle's Importer with Better Speed - A MySQL database import tool"

[workspace.dependencies]
# Parser dependencies
chumsky = "1.0.0-alpha.8"
ariadne = "0.4"

# Protocol dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"

# Server dependencies (sync MySQL)
# Use default-rustls for fully static binary (no system TLS/zlib dependencies)
mysql = { version = "25", default-features = false, features = ["default-rustls"] }

# Client dependencies
tokio = { version = "1", features = ["full"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
zstd = "0.13"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
serde_json = "1"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
home = "0.5"

# Shared
hex = "0.4"
indicatif = "0.17"

# Use vendored mysql implementation
[patch.crates-io]
mysql = { path = "vendor/mysql" }
mysql_common = { path = "vendor/mysql_common" }
