[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.2.1" # x-release-please-version
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/cresset-tools/jibs"
description = "Jelle's Importer with Better Speed - A MySQL database import tool"

[workspace.dependencies]
ariadne = "0.4"

# Protocol dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"

# Client-side MySQL (the server declares its own minimal feature set).
# Deliberately excludes mysql_common's derive/frunk/bigdecimal/rust_decimal/time
# features: the client never uses them and they dominate compile time.
mysql = { version = "25", default-features = false, features = ["rustls-tls", "minimal-rust", "buffer-pool"] }

# Client dependencies
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
zstd = "0.13"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
serde_json = "1"
rand = "0.8"

# Shared
hex = "0.4"
crossbeam-channel = "0.5"
indicatif = "0.17"

# Use vendored mysql implementation
[patch.crates-io]
mysql = { path = "vendor/mysql" }
mysql_common = { path = "vendor/mysql_common" }

# cargo-dist builds release artifacts with `--profile dist`. Inherit release;
# dist expects this profile to exist (normally added by `dist init`).
[profile.dist]
inherits = "release"
lto = "thin"
