[package]
name = "jibs_client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI client for Jibs database imports"

[[bin]]
name = "jibs"
path = "src/main.rs"

[features]
default = []
test-utils = []  # Enables --fail-after-tables for testing resume

[dependencies]
jibs_parser = { path = "../parser" }
jibs_protocol = { path = "../protocol", features = ["serde"] }
mysql.workspace = true
tokio.workspace = true
clap.workspace = true
sha2.workspace = true
zstd.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
hex.workspace = true
indicatif.workspace = true
crossbeam-channel.workspace = true
