[package]
name = "jibs_protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Protocol types for Jibs client-server communication"

[dependencies]
bincode.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
