[package]
name = "jibs_server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Remote server component for Jibs database imports"

[[bin]]
name = "jibs-server"
path = "src/main.rs"

[dependencies]
jibs_protocol = { path = "../protocol" }
# Use minimal mysql features to reduce binary size
mysql = { version = "25", default-features = false, features = ["minimal-rust", "binlog"] }
bincode.workspace = true
zstd.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
regex = "1"
itoa = "1"
ryu = "1"

[features]
default = []
